--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <div class="content">
         <h2>О сайте</h2>
-        <p>При помощи этой странички я буду познавать основы GitHub Actions и реализую CI/CD.</p>
+        <p>При помощи этой странички я буду познавать основы GitHub Actions и реализую CI/CD пайплайн.</p>
         
         <h3>Что нужно сделать:</h3>
         <ul>
