--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevOps Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <title>GitHub Actions CI/CD</title>
     <style>
         :root {
-            --primary: #2196F3;
-            --secondary: #F5F5F5;
+            --primary: #1890ff;
+            --secondary: #f5f5f5;
             --text: #333;
-            --light: #FFF;
+            --light: #fff;
             --dark: #333;
         }
 
@@ -21,7 +20,7 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-color: var(--secondary);
             color: var(--text);
             display: flex;
@@ -66,9 +65,6 @@
             width: 100%;
             max-width: 800px;
             margin-bottom: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
         .card h2 {
@@ -79,40 +75,18 @@
         .card ul {
             list-style: none;
             padding: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
         }
 
         .card ul li {
-            margin: 10px;
-            padding: 15px;
-            background-color: var(--secondary);
-            border-radius: 4px;
-            transition: transform 0.3s;
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
         }
 
-        .card ul li:hover {
-            transform: translateY(-5px);
-        }
-
-        .card ul li img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-bottom: 10px;
-        }
-
-        .card ul li h3 {
-            font-size: 1.4rem;
-            margin-bottom: 5px;
-        }
-
-        .card ul li p {
-            font-size: 1rem;
-            opacity: 0.8;
-            text-align: center;
+        .card ul li::before {
+            content: "✓";
+            color: var(--primary);
+            margin-right: 10px;
         }
 
         .footer {
@@ -123,7 +97,7 @@
         }
 
         @media (max-width: 768px) {
-            .header,.card {
+            .header, .card {
                 padding: 20px;
             }
 
@@ -136,4 +110,28 @@
             }
         }
     </style>
-</
+</head>
+<body>
+    <header class="header">
+        <h1>GitHub Actions CI/CD</h1>
+        <p>Изучение и реализация непрерывной интеграции и доставки</p>
+    </header>
+
+    <main class="main">
+        <div class="card">
+            <h2>О проекте</h2>
+            <p>Этот сайт посвящен изучению GitHub Actions и реализации CI/CD процессов.</p>
+
+            <h3>План реализации:</h3>
+            <ul>
+                <li>Создание локального репозитория для хранения проекта</li>
+                <li>Размещение репозитория на GitHub</li>
+                <li>Настройка полного CI/CD процесса</li>
+            </ul>
+
+            <p>Цель проекта - освоить базовые принципы работы с GitHub Actions и настроить автоматическую сборку и деплой проекта.</p>
+        </div>
+    </main>
+
+    <footer class="footer">
+        &copy; 2025
