--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Добро пожаловать на мой пет-прокт по GitHub_Actions!</h1>
+        <h1>Добро пожаловать на мой пет-прокет по GitHub_Actions!</h1>
     </div>
     
     <div class="content">
@@ -58,7 +58,7 @@
     </div>
     
     <div class="footer">
-        &copy; 2025 Мой сайт | Все права защищены
+        &copy; 2025 CI/CD | Все права защищены
     </div>
 </body>
 </html>
