--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>Добро пожаловать на мой пет-прокет по GitHub_Actions!</h1>
+        <h1>Добро пожаловать на мой пет-проект по GitHub_Actions!</h1>
     </div>
     
     <div class="content">
